test/parser/channel/connect-008.hac
// "connect-008.hac"
// should error out connecting two receive-only channels

defproc one_shot(chan?(bool) a) {
bool _x;
chp { a?(_x) }
}

chan(bool) x;
one_shot a(x), b(x);		// error

